Bug 37025 - ICE with TRANSFER to non-default-kind character: transfer(int(z'bde4'),4_'a')
Summary: ICE with TRANSFER to non-default-kind character: transfer(int(z'bde4'),4_'a')
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: fortran (show other bugs)
Version: 4.4.0
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks: 31237
  Show dependency treegraph
 
Reported: 2008-08-05 05:54 UTC by Tobias Burnus
Modified: 2008-08-23 18:21 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tobias Burnus 2008-08-05 05:54:02 UTC
f951: internal compiler error: in gfc_interpret_character, at fortran/target-memory.c:402

  gcc_assert (result->ts.kind == gfc_default_character_kind);

character(len=20,kind=4) :: str
str = transfer(int(z'bde4'),4_'a')
end
Comment 1 Tobias Burnus 2008-08-23 18:13:51 UTC
Subject: Bug 37025

Author: burnus
Date: Sat Aug 23 18:12:30 2008
New Revision: 139520

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=139520
Log:
2008-08-23  Tobias Burnus  <burnus@net-b.de>

        PR fortran/37025
        * target-memory.c (gfc_interpret_character): Support
        kind=4 characters.

2008-08-23  Tobias Burnus  <burnus@net-b.de>

        PR fortran/37025
        * gfortran.dg/widechar_8.f90: New.


Added:
    trunk/gcc/testsuite/gfortran.dg/widechar_8.f90
Modified:
    trunk/gcc/fortran/ChangeLog
    trunk/gcc/fortran/target-memory.c
    trunk/gcc/testsuite/ChangeLog

Comment 2 Tobias Burnus 2008-08-23 18:21:37 UTC
FIXED on the trunk (4.4).